# ros2_action_parameter_practical

./: .gitignore  LECTURE.md  README.md  run_practical.bash
ros2_practical_ws/: .bashrc
ros2_practical_ws/src/action_param_demo/: package.xml  setup.cfg  setup.py
ros2_practical_ws/src/action_param_demo/action_param_demo/: auto_charge_client.py  auto_charge_server.py  param_talker.py  parameter_set_get_client.py
ros2_practical_ws/src/action_param_interfaces/: CMakeLists.txt  package.xml
ros2_practical_ws/src/action_param_interfaces/action/: AutoCharge.action
